# smooth-utf8

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RefinedRust.toml
.cargo/: config.toml
.github/workflows/: ci.yml  publish-crates.yml  verify-tools-image.yml
benches/: throughput.rs
doc/: BENCHMARKS.md  gen-throughput-relative-svg.py  gen-throughput-svg.py  parse-criterion-log.py  throughput-data.csv
doc/bench-runs/: README.md
doc/bench-runs/run-20260628T200204Z-4/: 00-baseline.stdout.txt  01-candidate.stdout.txt
doc/bench-runs/run-20260628T221756Z-4/: 00-portable.stdout.txt  01-simd-avx2.stdout.txt
doc/bench-runs/run-20260628T221815Z-4/: 00-portable-arm.stdout.txt  01-simd-arm.stdout.txt
doc/bench-runs/run-20260628T230402Z-4/: 00-baseline-arm.stdout.txt  01-portable-arm.stdout.txt  02-wordwin-arm.stdout.txt
doc/bench-runs/run-20260629T192815Z-4/: 00-portable.stdout.txt  01-simd-fixed.stdout.txt
doc/spike/: gfni-kernel.py  gfni-result.md
examples/: align_probe.rs  asm_probe_inversion.rs  asm_probe_slackbuf.rs  microbench.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: verify_vs_std.rs  verify_with_slack.rs
src/: ascii_skip.rs  lib.rs  raw.rs  spec.rs  tests.rs
src/raw/: shims.rs
verify/: Dockerfile.tools  REFINEDRUST.md  rr-check.sh
